--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ Django==4.1.3
 django-crispy-forms==1.14.0
 flake8==5.0.4
 form==0.0.1
+gunicorn==20.1.0
 mccabe==0.7.0
 mypy-extensions==0.4.3
 pathspec==0.10.1
